# ChangeLog for sys-apps/calculate-i18n
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-i18n-2.2.22-r1 (31 Aug 2011)

  31 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.22-r1.ebuild, +files/calculate-i18n-2.2.22-r1.patch:
  Update for translate

*calculate-i18n-2.2.22 (26 Aug 2011)

  26 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.22.ebuild:
  Version bump

*calculate-i18n-2.2.21-r1 (22 Aug 2011)

  22 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.21-r1.ebuild, +files/calculate-i18n-2.2.21-r1.patch:
  Update for calculate-install translate

*calculate-i18n-2.2.21 (18 Aug 2011)

  18 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.21.ebuild:
  Bump version

*calculate-i18n-2.2.20-r4 (18 Aug 2011)

  18 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.20-r4.ebuild, +files/calculate-i18n-2.2.20-r4.patch:
  Update for fix bulgarian localization

*calculate-i18n-2.2.20-r3 (15 Aug 2011)

  15 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.20-r3.ebuild,
  +files/calculate-i18n-2.2.20-for_assemble.patch:
  Update assemble translation

*calculate-i18n-2.2.20-r2 (02 Aug 2011)

  02 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.20-r2.ebuild, +files/calculate-i18n-2.2.20-r2.patch:
  Update for install

*calculate-i18n-2.2.20-r1 (01 Aug 2011)

  01 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.20-r1.ebuild, +files/calculate-i18n-2.2.20-btrfs.patch:
  Update for translate message about btrfs

*calculate-i18n-2.2.20 (27 Jul 2011)

  27 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.20.ebuild:
  Bump version

*calculate-i18n-2.2.19-r3 (27 Jul 2011)

  27 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-i18n-2.2.19-r3.ebuild,