@@ -11,6 +11,7 @@ DIST calculate-i18n-2.2.19.tar.bz2 27303 RMD160 6b26957485cf49dc247b7bcd2ab50c89
 DIST calculate-i18n-2.2.20.tar.bz2 27970 RMD160 915663f7501e22d4c38fd5f2b931a87ef38e085c SHA1 f50321956541713d899dc9a806e2504f7c9f20ec SHA256 06e8a53009793d434b721014bf06fc5483f87163215e2d1323e3dde5767d3ab4
 DIST calculate-i18n-2.2.21.tar.bz2 28100 RMD160 8f785b28db85a946649ee87769d49ca77de9ec7d SHA1 262fad00e1f1127b75c9eaca4b8eef7787371e65 SHA256 bc9d9d1a03d50ed6d561265ee0161f2bea852a00af1685feaab8db247176f85b
 DIST calculate-i18n-2.2.22.tar.bz2 28293 RMD160 db9203fc78b9875954914939ca90b60b13790d6a SHA1 752e02e36ccfb9a71c35ecf308d3c464c481a760 SHA256 7e30536a0f889bacf4e7ebf02330fd2d0d59e5897af919fa093bf818e858afdf
+DIST calculate-i18n-2.2.23.tar.bz2 28588 RMD160 1a88fdff12bf698a638ae8230d34f9b7f5e302b4 SHA1 a8df66fa7a5f4b5e8d5a6642d4ab12d3c39f0b20 SHA256 344b281a39efbbcbf4495931bff390eb701c1c30c3307fc38e9b689d325035dd
 EBUILD calculate-i18n-2.2.19-r1.ebuild 811 RMD160 39f70bc0afdb25768256cfcf3641a1ec5cbe45df SHA1 2c34db4e9a747dcd3c0d1a1b5d0aec4cbc99d880 SHA256 d1f6aeba79583e5349cd28b5c4b4411368790677f0c42ceec458430d3bd0c39c
 EBUILD calculate-i18n-2.2.19-r2.ebuild 810 RMD160 ecef9752f813c51089ebbb6dbfb539e92fb8f8c6 SHA1 d52b6ae0fbf7d119b4f5af05cb8713afe1b2f59a SHA256 10a683eba2afc303c3f2780d467ff3dc81b6fc1956214727b925d608c1a2de3b
 EBUILD calculate-i18n-2.2.19-r3.ebuild 810 RMD160 e9e12771f0e9acf1f5870c6468ef4e756805dd00 SHA1 ca48023bd04abca9d188b5fe40933590380a1fa4 SHA256 edb123c353497c7f59c5deced62a82fc46a3803aa2de6b436b17bead61108a8a
@@ -24,6 +25,7 @@ EBUILD calculate-i18n-2.2.21-r1.ebuild 812 RMD160 4f1843dedbe340f7e1ab943217b97b
 EBUILD calculate-i18n-2.2.21.ebuild 682 RMD160 7c158a21d27de99c219ced2043fddd4f6629a132 SHA1 0d112aab5e8857131b30969a9011fed2f26955b8 SHA256 d9b2a1b26c155475f01d3e42dd15f0222f786b21806fe2fbc7f5b91285394e09
 EBUILD calculate-i18n-2.2.22-r1.ebuild 819 RMD160 1616d084f44483af4bfaccbba4780dcdade6eedc SHA1 9ea8ccb03f7b82eefe980c0c2486ff30f351101e SHA256 9bf055b707b487d6adc834eb80b59b05325a2a1fafd4c07f4425ab755ff78686
 EBUILD calculate-i18n-2.2.22.ebuild 682 RMD160 7c158a21d27de99c219ced2043fddd4f6629a132 SHA1 0d112aab5e8857131b30969a9011fed2f26955b8 SHA256 d9b2a1b26c155475f01d3e42dd15f0222f786b21806fe2fbc7f5b91285394e09
+EBUILD calculate-i18n-2.2.23.ebuild 682 RMD160 7c158a21d27de99c219ced2043fddd4f6629a132 SHA1 0d112aab5e8857131b30969a9011fed2f26955b8 SHA256 d9b2a1b26c155475f01d3e42dd15f0222f786b21806fe2fbc7f5b91285394e09
 EBUILD calculate-i18n-2.2.9999.ebuild 680 RMD160 b3d1cfb1045bc3b5da1be318c13fd15919f16aef SHA1 acfe16d8ac67eb88426f46980df3892d7c5a7de7 SHA256 623a395dd35d2620e697b9f8c97d58d3a7220cade8b3a69186050d921d26b802
-MISC ChangeLog 2706 RMD160 8e7409e081f4f1c6ab146e71457a8517b87084ec SHA1 d5324fc80fb9f81b4c0ae37173c90326c60b57dd SHA256 96b0fb739bb1b5fd280de8589a455eaea43f4f4a69397b7f6937df0e109bf6da
+MISC ChangeLog 2853 RMD160 827de6c872c50eb0998dd203f1d036ccca7071af SHA1 38edb75d65706bcd83a16a8105e95c57308672ff SHA256 eeed52da36bae0c53b99446342b8bbe13aa7745cad155b70f2108bcf16f094ca
 MISC metadata.xml 276 RMD160 d9730825fc3ad1b5ea7ba45704121ebd29e38b11 SHA1 c4c1576efbc38119efca43cfa273cb9f433f1de1 SHA256 a2312171d1cbfac41a263c0be692d3d12cfa3aab51979af64487824ae674bc2c
