@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-i18n-2.2.23 (05 Sep 2011)
+
+  05 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-i18n-2.2.23.ebuild:
+  Version bump
+
 *calculate-i18n-2.2.22-r1 (31 Aug 2011)
 
   31 Aug 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
